# MLnext-Framework

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  Dockerfile  MANIFEST.in  README.rst  Untitled.ipynb  pip.conf  pyproject.toml  readme.md  requirements.txt  setup.py  tox.ini
changelog/: 1.change.rst  10.change.rst  11.feature.rst  12.change.rst  13.feature.rst  14.feature.rst  15.feature.rst  16.feature.rst  17.feature.rst  18.feature.rst  19.feature.rst  2.change.rst  20.change.rst  21.feature.rst  22.change.rst  23.feature.rst  24.change.rst  25.feature.rst  26.feature.rst  27.feature.rst  28.change.rst  29.change.rst  30.change.rst  31.change.rst  39.feature.rst  40.change.rst  40.deprecation.rst  41.deprecation.rst  42.deprecation.rst  46.change.rst  47.change.rst  48.feature.rst  50.change.rst  51.change.rst  52.feature.rst  53.feature.rst  54.change.rst  56.feature.rst  57.feature.rst  58.change.rst  (+9 more)
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/pages/: changelog.rst  modules.rst  notice.rst  readme.rst
mlnext/: __init__.py  anomaly.py  data.py  io.py  model.py  pipeline.py  plot.py  score.py  utils.py
mlutils/: data.py  pipeline.py  plot.py  score.py
test/: test_anomaly.py  test_data.py  test_io.py  test_pipeline.py  test_plot.py  test_score.py  test_utils.py
tests/: test_anomaly.py  test_data.py  test_model.py  test_pipeline.py  test_plot.py  test_score.py
