[tool.towncrier]
    package_dir="."
    package = "mlnext"
    filename = "CHANGELOG.rst"
    directory = "changelog"
    template = "changelog/towncrier_template.rst"
    issue_format = "`#{issue} <https://gitlab.phoenixcontact.com/vmm-factory-automation/digital-factory/data-collection-storage-evaluation/anomaly-detection/mlnext_framework/-/issues/{issue}>`__"
    title_format = "{version} ({project_date})"
    underlines=["-", "-", "^"]

    [[tool.towncrier.type]]
        directory = "change"
        name = "Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "feature"
        name = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "deprecation"
        name = "Deprecations"
        showcontent = true

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
