[project]
name = "mlnext"
description = "Machine learning utilities."
authors = [
    { name = "PHOENIX CONTACT Electronics GmbH", email = "digitalfactorynow@phoenixcontact.com" },
    { name = "Gorden Platz", email = "gplatz@phoenixcontact.com" },
]
dependencies = [
    "matplotlib >= 3.5.0",
    "numpy >= 1.21.4",
    "pandas>=1.2.3",
    "pydantic>=1.8.1",
    "pyDeprecate >= 0.3.2",
    "pydot >= 1.4.2",
    "PyYAML>=5.4.1",
    "scikit_learn>=0.24.1",
    "seaborn >= 0.11",
]
readme = "README.rst"
requires-python = ">= 3.8"
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "testfixtures>=8.3.0",
    "pytest>=8.2.2",
    "coverage>=7.5.3",
    "scipy>=1.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "tox>=4.15.1",
    "pandas-stubs>=2.2.2.240603",
    "types-pyyaml>=6.0.12.20240311",
    "mypy>=1.10.0",
    "ipykernel>=6.29.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mlnext"]

[tool.hatch.version]
path = "mlnext/__init__.py"

[tool.towncrier]
package_dir = "."
package = "mlnext"
filename = "CHANGELOG.rst"
directory = "changelog"
template = "changelog/towncrier_template.rst"
issue_format = "`#{issue} <https://gitlab.phoenixcontact.com/vmm-factory-automation/digital-factory/data-collection-storage-evaluation/anomaly-detection/mlnext_framework/-/issues/{issue}>`__"
title_format = "{version} ({project_date})"
underlines = ["-", "-", "^"]

[[tool.towncrier.type]]
directory = "change"
name = "Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecation"
name = "Deprecations"
showcontent = true

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
