[project]
name = "mlnext"
description = "Machine learning utilities."
authors = [
    { name = "PHOENIX CONTACT Electronics GmbH", email = "digitalfactorynow@phoenixcontact.com" },
    { name = "Gorden Platz", email = "gplatz@phoenixcontact.com" },
]
dependencies = [
    "matplotlib >= 3.5.0",
    "numpy >= 1.21.4",
    "pandas>=1.2.3",
    "pydantic>=1.8.1",
    "pyDeprecate >= 0.3.2",
    "pydot >= 1.4.2",
    "PyYAML>=5.4.1",
    "scikit_learn>=0.24.1",
    "seaborn >= 0.11",
]
readme = "README.rst"
requires-python = ">= 3.8"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
]
keywords = ["mlnext", "machine", "learning", "utilities"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/PLCnext/MLnext-Framework"
Documentation = "https://mlnext-framework.readthedocs.io/en/latest/"

[project.optional-dependencies]
tests = [
    "testfixtures>=8.3.0",
    "pytest>=8.2.2",
    "coverage>=7.5.3",
    "scipy>=1.10.1",
]
docs = [
    "furo>=2024.01.29",
    "myst-parser>=2.0.0",
    "numpydoc>=1.7.0",
    "python-dateutil>=2.8.2",
    "rinohtype>=0.5.4",
    "sphinx>=7.2.6",
    "sphinx-copybutton>=0.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "tox>=4.15.1",
    "pandas-stubs>=2.2.2.240603",
    "types-pyyaml>=6.0.12.20240311",
    "mypy>=1.10.0",
    "ipykernel>=6.29.4",
    "pytest>=8.2.2",
    "coverage>=7.5.3",
    "scipy>=1.10.1",
    "testfixtures>=8.3.0",
    "uv>=0.2.13",
    "towncrier>=23.11.0",
    "build>=1.2.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mlnext"]

[tool.hatch.version]
path = "mlnext/__init__.py"

[tool.towncrier]
package_dir = "."
package = "mlnext"
filename = "CHANGELOG.rst"
directory = "changelog"
template = "changelog/towncrier_template.rst"
issue_format = "`#{issue} <https://gitlab.phoenixcontact.com/vmm-factory-automation/digital-factory/data-collection-storage-evaluation/anomaly-detection/mlnext_framework/-/issues/{issue}>`__"
title_format = "{version} ({project_date})"
underlines = ["-", "-", "^"]

[[tool.towncrier.type]]
directory = "change"
name = "Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecation"
name = "Deprecations"
showcontent = true

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
